# gen-ai-app-dev

./: pyproject.toml
Gen-AI-Fundamentals/: llm-challenges.ipynb
HuggingFace/: auto-classes.ipynb  bert-question-answering.ipynb  hub-library-inference-client.ipynb  hugging-face-environment.ipynb  logits-sentiment-analysis.ipynb  model-classes.ipynb  summarization-task-endpoint-pipeline.ipynb  tokenizer-class.ipynb  transformers-library.ipynb
utils/: hf_post_api.py
