[project]
name = "gen-ai-app-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anaconda==0.0.1.1",
    "ipywidgets==8.1.7",
    "langchain>=0.3.26",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "pip==25.2",
    "transformers>=4.54.1",
]
